# winterfest_applied_ai_pe

./: .gitignore  CLAUDE.md  README.md  agent.ipynb  birthday_bash_talk.md  main.py  pyproject.toml  test.ipynb  winterfest_talk.md
data/: training_history.csv
data/bbb/: baseline_results_mlx.jsonl  baseline_results_mlx_2b.jsonl  tool_calling_trajectories.jsonl  trajectories_raw.jsonl  trajectories_sft.jsonl
data/bbb/mlx_sft/: train.jsonl  (+1 more)
data/output/: Duolingo_2025-11-18_21-47-42.md
data/winterfest/: training_data_examples.jsonl  training_data_examples_hallucination.jsonl
docs/: demo_cheatsheet.md  grpo_learnings_winterfest.md  research_financial_rl_rewards.md  research_grpo_explained.md  research_reward_design.md  research_reward_examples.md  research_sft_rl_benchmarks.md  takeaways_rl.md  takeaways_sft.md
docs/tutorial_content/: FunctionGemma_(270M)_Mobile_Actions.ipynb  claude_plan.md  local_llm_on_mac.md
models/mlx_sft_adapters/: adapter_config.json
nb/: agent.ipynb  test.ipynb  trainer.ipynb  training_data_generator.ipynb  training_recipe.ipynb  user_memory.py
nb/bbb/: _phase_1_teacher.ipynb  _phase_2_data_gen.ipynb  _phase_3_baseline.ipynb  _phase_4_sft.ipynb  _phase_4_sft_colab.ipynb  _phase_4_sft_kaggle.ipynb  _phase_4_sft_mlx.ipynb  _phase_5_rl.ipynb  _pipeline.ipynb  agent.py  birthday_bash_talk.md  debug_train.py  helpers__data_gen.py  helpers__inference.py  sft_config.yaml  tool_calling_agent.ipynb  tools.py
nb/winterfest/: agent.ipynb  training_data_generator.ipynb  winterfest_talk.md
tools/: stock_tools.py
tools/mcp/: stock_server.py
(+5170 files in other folders)
