[project]
name = "test-showcase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "limiter>=0.5.0",
    "openai>=2.7.2",
    "openai-agents[viz]>=0.5.1",
    "pandas>=2.3.3",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "yfinance==0.2.62",
]
